@@ -2377,11 +2377,15 @@ static PyObject *CmdDist(PyObject *dummy, PyObject *args)
         PRINTFB(TempPyMOLGlobals,FB_Executive,FB_Errors)
           " Distance-ERR: selection 1 contains no atoms.\n"
           ENDFB(TempPyMOLGlobals);
+        if(reset)
+          ExecutiveDelete(TempPyMOLGlobals,name);
       } 
       if((quiet!=2)&&(!c2)) {
         PRINTFB(TempPyMOLGlobals,FB_Executive,FB_Errors)
           " Distance-ERR: selection 2 contains no atoms.\n"
           ENDFB(TempPyMOLGlobals);
+        if(reset)
+          ExecutiveDelete(TempPyMOLGlobals,name);
       }
       result = -1.0;
     }
